# mccl

./: COMPATIBILITY.md  LICENSE  README.md  RESULTS.md  TESTING.md  pyproject.toml  requirements.txt  setup.py  test_quick.py
.github/workflows/: ci.yml  publish.yml
csrc/backend/: MPSDispatch.cpp  Options.hpp  ProcessGroupMCCL.cpp  ProcessGroupMCCL.hpp  Registration.cpp  WorkMCCL.cpp  WorkMCCL.hpp
csrc/common/: Errors.hpp  Logging.hpp  TensorChecks.hpp  Version.hpp
csrc/compression/: Compression.cpp  Compression.hpp  FP16Compression.cpp  FP16Compression.hpp  TopKCompression.cpp  TopKCompression.hpp
csrc/metal/: AccelerateOps.hpp  AccelerateOps.mm  EventSync.hpp  EventSync.mm  MPSInterop.hpp  MPSInterop.mm  MetalKernels.hpp  MetalKernels.mm  shaders.metal
csrc/runtime/: GradientValidator.cpp  GradientValidator.hpp  HealthMonitor.cpp  HealthMonitor.hpp  MCCLDeviceMutex.cpp  MCCLDeviceMutex.hpp  MemoryPool.cpp  MemoryPool.hpp  Metrics.cpp  Metrics.hpp  ProgressEngine.cpp  ProgressEngine.hpp  Rendezvous.cpp  Rendezvous.hpp  ThreadPool.cpp  ThreadPool.hpp  Watchdog.cpp  Watchdog.hpp
csrc/transport/: Connection.cpp  Connection.hpp  Protocol.hpp  TcpTransport.cpp  TcpTransport.hpp  Transport.hpp
csrc/transport/rdma/: IbvWrapper.cpp  IbvWrapper.hpp  RdmaConnection.cpp  RdmaConnection.hpp  RdmaTransport.cpp  RdmaTransport.hpp  SharedBuffer.cpp  SharedBuffer.hpp  ibverbs_compat.h
docs/: DEVELOPING.md  MULTINODE.md  THUNDERBOLT_SETUP.md
examples/: benchmark_throughput.py  compare_single_vs_ddp.sh  ddp_dummy_train.py  ddp_utils.py
mccl/: __init__.py  config.py  shaders.metal  tuning.py  version.py
mccl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: benchmark_matrix.sh  build_and_test.sh  env.sh  launch_multi_host_ddp.sh  launch_two_host.sh  thunderbolt_prod.sh
tests/: bench_ddp.py  bench_mccl_vs_gloo.py  soak_allreduce_ring_manual.py  test_build.py  test_compression.py  test_cpu_tensors.py  test_ddp.py  test_local_kernels.py  test_multi_host_ddp.py  test_process_group_local.py  test_protocol.py  test_soak.py  test_two_host_ddp.py  test_v2_collectives.py
