[build-system]
requires = [
    "setuptools>=68.0",
    "wheel>=0.41",
    "torch>=2.5.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "mccl"
version = "0.3.3"
description = "MPS-native ProcessGroup backend for PyTorch Distributed on Apple Silicon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
[project.urls]
Repository = "https://github.com/mps-ddp/mccl"


[project.optional-dependencies]
dev = [
    "numpy>=1.24",  # PyTorch probes NumPy at import; avoids UserWarning in CI without it
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]

[tool.setuptools.packages.find]
include = ["mccl*"]

[tool.pytest.ini_options]
addopts = "--tb=short --capture=no --log-cli-level=WARNING"
log_file = "test_failures.log"
log_file_level = "DEBUG"
